--- a/templates/result.html
+++ b/templates/result.html
@@ -5,10 +5,18 @@
 {% block body%} 
 <ul>
 <li>
+<h4 style="color:Yellow">Team: <h4 style = "color:White"> {{ Team }}</h4>
+</li>
+<br>
+<br> 
+<br> 
+<br>
+<br>
+<li>
 <h4 style="color:Yellow">Players: <h4 style = "color:White"> {{ Final_prediction }}</h4>
 </li>
 <br>
-<br>    
+<br>   
 <li>
 <h4 style="color:Yellow"> Playing Role: <h4 style = "color:White"> {{Roles}}</h4>
 </li>
